tests/errors/parse_error_2.ceos
let foo = 1 {
  foo)
}
